--- a/config/config.json
+++ b/config/config.json
@@ -2,25 +2,20 @@
   "development": {
     "username": "root",
     "password": "",
-    "database": "chatapp",
+    "database": "bug_tester",
     "host": "127.0.0.1",
-    "port": 3306,
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": "",
+    "password": null,
     "database": "database_test",
     "host": "127.0.0.1",
-    "port": 3306,
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": "",
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "port": 3306,
+    "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql"
+    
   }
 }
