--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
-  "name": "chat-app",
+  "name": "bug_tester",
   "version": "1.0.0",
-  "description": "An application that allows you to chat amongst users of the app",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/chris31roc/project2.git"
-  },
-  "keywords": [
-    "chat-app",
-    "project2"
-  ],
-  "author": "Christopher Hicks Nikki Nguyen Kyle Barrand Muhammad Usman Walter Leiva",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/chris31roc/project2/issues"
-  },
-  "homepage": "https://github.com/chris31roc/project2#readme",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.3",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-handlebars": "^5.2.1",
-    "mysql": "^2.18.1"
+    "express-handlebars": "^5.1.0",
+    "express-session": "^1.17.1",
+    "handlebars": "^4.5.3",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "sequelize": "^6.3.4"
   }
 }
